# bno055lib

./: .buildinfo  .gitignore  API_REFERENCE.html  ARCHITECTURE.html  CALIBRATION.html  CHANGELOG.md  CMakeLists.txt  Doxyfile  FEATURES_AND_COMPARISON.html  HEADING_CONTROL.html  INTEGRATION.html  README.html  README.md  RELEASE_GUIDE.html  SENSOR_OVERVIEW.html  TROUBLESHOOTING.html  add_mag.py  conanfile.py  genindex.html  index.html  objects.inv  package.xml  search.html  searchindex.js  setup.py  update_yaml.py  vcpkg.json
.doctrees/: API_REFERENCE.doctree  ARCHITECTURE.doctree  CALIBRATION.doctree  FEATURES_AND_COMPARISON.doctree  HEADING_CONTROL.doctree  INTEGRATION.doctree  README.doctree  RELEASE_GUIDE.doctree  TROUBLESHOOTING.doctree  environment.pickle  index.doctree
.github/workflows/: ci.yml  docs.yml  release.yml
_sources/: API_REFERENCE.md.txt  CALIBRATION.md.txt  README.md.txt
config/: bno055_params.yaml
debian/: changelog
docs/: API_REFERENCE.md  INTEGRATION.md  conf.py
examples/: README.md  calibrate.cpp  read_all_data.cpp  read_data_noexcept.cpp  ros2_publisher_node.cpp
include/bno055lib/: bno055.hpp
include/libbno055-linux/: bno055.hpp
include/libbno055-linux/controllers/: heading_controller.hpp
launch/: heading_control_launch.py
rust/: Cargo.toml  README.md  build.rs
rust/cpp/src/: bno055.cpp  bno055_c.cpp
rust/cpp/src/python/: bindings.cpp
rust/examples/: demo.rs
rust/src/: lib.rs
src/: bno055.cpp  bno055_c.cpp
src/python/: bindings.cpp
src/ros2/: README.md  bno055_ros2_common.hpp  ros2_heading_control_node.cpp  ros2_lifecycle_heading_control_node.cpp  ros2_lifecycle_publisher_node.cpp  ros2_perf_publisher_node.cpp  ros2_publisher_node.cpp
tests/: test_bno055.cpp  test_ros2_nodes.cpp
