[package]
name = "libbno055"
version = "1.4.3"
edition = "2021"
authors = ["lazytatzv <lazytatzv@users.noreply.github.com>"]
description = "Safe and idiomatic Rust bindings for libbno055-linux C++17 IMU driver"
license = "MIT"
repository = "https://github.com/lazytatzv/libbno055-linux"

[dependencies]

[build-dependencies]
cc = "1.0"
